[tool.poetry]
name = "aqimon"
version = "0.2.0"
description = "Air Quality Index Monitor"
authors = ["Tim Orme"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
pyserial = "^3.5"
uvicorn = "^0.21.0"
databases = {extras = ["aiosqlite"], version = "^0.7.0"}
fastapi-utils = "^0.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.256"
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aqimon = "aqimon.server:start"
aqimond = "aqimon.server:debug"

[tool.ruff]
select = ["E", "F", "D"]
ignore = ["D203", "D213"]
line-length = 120

[tool.black]
line-length = 120

[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true